--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <body onload="onLoad()">
 		<!-- Content: div-tag with id = "content" -->
 		<div id = "content">
-			<h1>Bluifruit test</h1>
+			<h1>Bluifruit Ny</h1>
 			   
 			<ul id="bleDeviceList"> </ul>  
 			<button id="refreshButton" onClick = "refreshDeviceList()">Refresh</button>
